Добавляет раздел футер, фавикон, шрифты

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,10 +1,2 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
-
-// Стили для файла с примером HTML-фрагмента
-// @import './example';
-
-// layout
-// @import './layout/main-list';
+@import './base/base_styles';
+@import './base/container';
