Добавляет дефолт шрифта, палитру и разметку футера

--- a/src/sass/base/_base_styles.scss
+++ b/src/sass/base/_base_styles.scss
@@ -35,3 +35,10 @@ button {
   padding: 0;
   border: none;
 }
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0;
+  font-weight: 500;
+}
