--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,9 @@
 <footer class="footer">
-  <div class="container"></div>
+  <div class="container">
+    <div class="footer__container">
+    <p class="footer__description-first"><span class="footer__description-unicode">&#169</span>2020 | All Rights Reserved |</p>
+    <p class="footer__description-second">Developed with by <a href="">GoIT Students</a></p>
+    </div>
+  </div>
 </footer>
+
