--- a/src/sass/layout/_main-list.scss
+++ b/src/sass/layout/_main-list.scss
@@ -1,47 +1,15 @@
-ul,
-ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-}
-
-li {
-  list-style: none;
-}
-
-img {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-.container {
-  padding: 20px;
-}
-
-.render-item {
-  margin-top: 20px;
-}
+// li {
+//   list-style: none;
+// }
 
 .render-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  // justify-content: space-between;
+}
+
+.render-item {
+  margin-top: 20px;
 }
 
 .render-img {
@@ -49,6 +17,12 @@ a {
   width: 280px;
   height: 402px;
 }
+
+.moavi-poster {
+  width: 100%;
+  height: 100%;
+}
+
 .moavi-title {
   font-family: Roboto;
   font-weight: 500;
@@ -91,13 +65,15 @@ a {
     width: 293px;
     height: 398px;
   }
-  .movie-list {
-    margin-top: 30px;
-    margin-left: 55px;
-    margin-right: 55px;
+  .movie-box {
+    padding-top: 30px;
   }
   .render-item {
     margin-top: 30px;
+    margin-left: 30px;
+  }
+  .movie-list {
+    margin-left: -30px;
   }
 }
 @media screen and (min-width: 1024px) {
