--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,8 +1,61 @@
 .footer {
   background-color: $secondary-background;
+  color: $footer-text-color;
+  &__icon {
+    margin-right: 10px;
+    margin-left: 10px;
+  }
 }
+.footer__description-unicode {
+  margin-right: 4px;
+}
+.footer__description-link {
+  color: $footer-text-color;
+  text-decoration: underline;
+  text-decoration-color: $footer-text-color;
+  margin-left: 4px;
+}
+.footer__description-second {
+  display: inline-flex;
+  align-items: center;
+}
+
 @media screen and (max-width: 767px) {
   .footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     height: 100px;
+  }
+  .footer__description-first {
+    margin-bottom: 10px;
+  }
+  .footer__description-first,
+  .footer__description-second {
+    font-size: 14px;
+    line-height: 1.17;
+    font-weight: 400;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer {
+    height: 77px;
+  }
+  .footer__container {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    padding-top: 30px;
+  }
+  .footer__description-second {
+    margin-left: 4px;
+  }
+  .footer__description-first,
+  .footer__description-second {
+    font-size: 16px;
+    line-height: 1.17;
+    font-weight: 400;
   }
 }
