--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,19 @@
 <header class="header">
-    <div class="container">
-        <svg class="header__icon--film" width="24" heihgt="24">
-            <use href="../images/sprite.svg#icon-film"></use>
-        </svg>
-        <nav class="header__nav">
-            <a class="header__nav--link">HOME</a>
-            <a class="header__nav--link">MY LIBRARY</a>
-        </nav>
+  <div class="container">
+    <svg class="header__icon--film" width="24" height="24">
+      <use href="./images/sprite.svg#icon-film"></use>
+    </svg>
+    <nav class="header__nav">
+      <a class="header__nav--link">HOME</a>
+      <a class="header__nav--link">MY LIBRARY</a>
+    </nav>
 
-        <label class="header__label">
-            <input class="header__input">
-        </label>
+    <label class="header__label">
+      <input class="header__input" />
+    </label>
 
-        <svg class="header__icon--search" width="12" heihgt="12">
-            <use href="../images/sprite.svg#icon-search"></use>
-        </svg>
-    </div>
+    <svg class="header__icon--search" width="12" height="12">
+      <use href="./images/sprite.svg#icon-search"></use>
+    </svg>
+  </div>
 </header>
