add contributors modal window

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,3 +3,6 @@
 @import './base/container';
 @import './base/variables';
 @import './layout/footer';
+@import './utils/visually-hidden';
+@import './utils/backdrop';
+@import './layout/contributors';
