--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,9 @@
 <footer class="footer">
   <div class="container">
-    <div class="footer__container">
+    <div class="footer__container element-animation">
     <p class="footer__description-first"><span class="footer__description-unicode">&#169</span> 2020 | All Rights Reserved |</p>
     <p class="footer__description-second">Developed with<svg class="footer__icon" width="14" height="14"><use href="./images/sprite.svg#icon-favorite-heart"></use></svg>by <a class="footer__description-link" href="">GoIT Students</a></p>
+  </div>
   </div>
 </footer>
 
