--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -5,3 +5,10 @@ $secondary-text-color: #ffffff;
 $footer-text-color: #545454;
 $primary-background: #ffffff;
 $secondary-background: #f7f7f7;
+
+:root {
+  --main-color: #ffffff;
+  --primary-color: #000000;
+  --accent-color: #ff6b08;
+  --footer-bg-color: #f7f7f7; // и фон на стрелках в пагинации
+}
