without input after

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import './base/base_styles';
 @import './base/container';
 @import './base/variables';
+@import './layout/header';
 @import './layout/footer';
