--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,15 +1,18 @@
 <header class="header">
   <div class="container">
-    <svg class="header__icon--film" width="24" height="24">
-      <use href="./images/sprite.svg#icon-film"></use>
-    </svg>
-    <nav class="header__nav">
-      <a class="header__nav--link">HOME</a>
-      <a class="header__nav--link">MY LIBRARY</a>
-    </nav>
+      <div class="header__menu">
+          <svg class="header__icon--film" width="24" height="24">
+            <use href="./images/sprite.svg#icon-film"></use>
+          </svg>
+          <nav class="header__nav">
+            <a class="header__nav--link">HOME</a>
+            <a class="header__nav--link">MY LIBRARY</a>
+          </nav>
+      </div>
+    
 
     <label class="header__label">
-      <input class="header__input" />
+      <input class="header__input" placeholder="Поиск фильмов"/>
     </label>
 
     <svg class="header__icon--search" width="12" height="12">
