--- a/src/sass/layout/_contributors.scss
+++ b/src/sass/layout/_contributors.scss
@@ -51,10 +51,10 @@
 
 @media screen and (min-width: 768px) {
   .cont {
-    top: 50%;
+    top: 15%;
     left: 50%;
     margin: unset;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     padding: 30px;
     width: 65%;
     background-image: url('../images/wall-tablet.jpg');
