--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,11 +1,25 @@
 .header {
-  @media screen and (min-width: 320px) {
-    padding-top: 46px;
-    padding-bottom: 97px;
+  padding-top: 41px;
+  padding-bottom: 97px;
 
+  @media screen and (min-width: 320px) {
     background: -webkit-image-set(
       url('../images/header-bg/header-bg-home_M.png') 1x,
       url('../images/header-bg/header-bg-home@2_M.png') 2x
+    );
+  }
+
+  @media screen and (min-width: 768px) {
+    background: -webkit-image-set(
+      url('../images/header-bg/header-bg-home_T.png') 1x,
+      url('../images/header-bg/header-bg-home@2_T.png') 2x
+    );
+  }
+
+  @media screen and (min-width: 1024px) {
+    background: -webkit-image-set(
+      url('../images/header-bg/header-bg-home_D.png') 1x,
+      url('../images/header-bg/header-bg-home@2_D.png') 2x
     );
   }
 }
@@ -13,33 +27,73 @@
 .header__menu {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 41px;
+  margin-bottom: 38px;
+}
+
+.header__logo-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 175px;
+}
+
+.header__title {
+  font-size: 30px;
+  line-height: 1.17;
+  color: $primary-background;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .header__nav {
   display: flex;
   justify-content: space-between;
-
-  @media screen and (min-width: 320px) {
-    width: 143px;
-    padding-top: 12px;
-  }
+  text-align: center;
+  width: 143px;
+  padding-top: 12px;
 }
 
 .header__nav--link {
-  text-align: center;
-  color: rgba(255, 255, 255, 1);
-}
-
-.header__input {
-  border: none;
   color: $primary-background;
 
   &::after {
     content: '';
     display: block;
-    width: 280px;
-    border: 0.5px solid white;
+    width: 100%;
+    height: 3px;
+    background-color: $accent;
+  }
+}
+
+.header__label {
+  display: block;
+  width: 280px;
+  margin: 0 auto;
+
+  @media screen and (min-width: 768px) {
+    width: 336px;
+  }
+
+  &::after {
+    content: '';
+    display: block;
+    width: 100%;
+    border: 0.5px solid $secondary-background;
+  }
+}
+
+.header__input {
+  position: relative;
+  width: 100%;
+  height: 20px;
+  border: none;
+  background-color: transparent;
+  color: $primary-background;
+
+  @media screen and (min-width: 768px) {
+    width: 336px;
   }
 
   &::placeholder {
@@ -48,10 +102,20 @@
     align-items: center;
     color: $primary-background;
   }
+}
 
-  @media screen and (min-width: 320px) {
-    width: 100%;
-    height: 20px;
-    background-color: transparent;
+.header__icon--search {
+  position: absolute;
+  top: 39%;
+  transform: translateY(-50%);
+  left: 287px;
+
+  @media screen and (min-width: 768px) {
+    top: 40%;
+    left: 538px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    left: 665px;
   }
 }
