--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,7 @@
 @import './base/base_styles';
 @import './utils/visually-hidden';
 @import './base/container';
-@import './base/mobile';
+@import './layout/mobile';
 @import './layout/footer';
 @import './utils/backdrop';
 @import './layout/contributors';
