--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -106,12 +106,12 @@
 
 .header__icon--search {
   position: absolute;
-  top: 39%;
+  top: 120px;
   transform: translateY(-50%);
   left: 287px;
 
   @media screen and (min-width: 768px) {
-    top: 40%;
+    top: 123px;
     left: 538px;
   }
 
