--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
     
         <label class="header__label">
               <input 
-                  class="header__input" 
+                  class="header__input header__form-input" 
                   name="filmname" 
                   placeholder="Поиск фильмов"/>
         </label>
