--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,10 @@
 @import './base/container';
 @import './layout/header';
 @import './layout/mobile';
+@import './layout/gallery';
+@import './layout/pagination';
 @import './layout/footer';
 @import './utils/backdrop';
 @import './layout/contributors';
+@import './layout/notifications';
+@import './layout/spinner';
