Correct mobile, add tablet and desktop for modal

--- a/src/sass/layout/_mobile.scss
+++ b/src/sass/layout/_mobile.scss
@@ -13,14 +13,22 @@
 }
 .card {
   width: 280px;
+
   padding: 20px;
 }
 .card-img {
   padding: 48px 20px 30px 20px;
   width: 240px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
 }
 img {
-  max-width: 100%;
+  object-fit: contain;
+  min-width: 100%;
+  min-height: 100%;
 }
 .card-body-title {
   margin-bottom: 20px;
@@ -69,16 +77,16 @@ img {
   color: $primary-text-color;
 }
 .card-body-overview-title {
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 20px;
 
   text-transform: uppercase;
 
-  color: $primary-background;
+  color: $primary-text-color;
 }
 .card-body-overview-text {
-  margin-bottom: 21px;
+  margin-bottom: 20px;
   padding-left: 20px;
 
   line-height: 1.67;
@@ -88,7 +96,6 @@ img {
 .card-container-btn {
   padding-left: 20px;
   display: flex;
-  justify-content: space-between;
 }
 .card-btn-watched,
 .card-btn-queue {
@@ -105,8 +112,13 @@ img {
   background-color: $accent-secondary;
   color: $primary-text-color;
   border: 5px;
+
   margin-right: 15px;
+  padding: 0px 9px;
 }
 .card-body-container {
   display: flex;
+}
+.card-btn-text-first {
+  color: $secondary-text-color;
 }
