--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,5 @@
 @import './layout/footer';
 @import './utils/backdrop';
 @import './layout/contributors';
+@import './layout/tablet';
+@import './layout/desktop';
