--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,13 +4,12 @@
 @import './base/container';
 @import './layout/header';
 @import './layout/gallery';
-@import './layout/mobile';
-@import './layout/tablet';
-@import './layout/desktop';
+// @import './layout/mobile';
+// @import './layout/tablet';
+// @import './layout/desktop';
 @import './layout/pagination';
 @import './layout/footer';
 @import './utils/backdrop';
 @import './layout/contributors';
 @import './layout/notifications';
 @import './layout/spinner';
-
