create scroll btn

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,3 +13,4 @@
 @import './layout/contributors';
 @import './layout/notifications';
 @import './layout/spinner';
+@import './layout/scroll-up-btn';
