--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header header-home">
   <div class="container">
     <div class="header__menu">
       <div class="header__logo-box">
@@ -9,8 +9,8 @@
       </div>
 
       <nav class="header__nav">
-        <a class="header__nav--link" id="link-home" href="#">HOME</a>
-        <a class="header__nav--link" id="link-lib" href="#">MY LIBRARY</a>
+        <button type= 'button' class="header__nav--link header__nav--link--current" data-action="link-home">HOME</button>
+        <button type= 'button' class="header__nav--link" data-action="link-lib">MY LIBRARY</a>
       </nav>
     </div>
 
