--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import './utils/visually-hidden';
 @import './base/container';
 @import './layout/header';
+@import './layout/header-bgi';
 @import './layout/gallery';
 // @import './layout/mobile';
 // @import './layout/tablet';
