--- a/src/sass/layout/_header-bgi.scss
+++ b/src/sass/layout/_header-bgi.scss
@@ -1,5 +1,6 @@
 .header-home {
   background-image: url('../images/header-bg/header-bg-home_M.png');
+  transition: background-image 400ms cubic-bezier(0.4, 0, 0.2, 1);
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -32,6 +33,7 @@
 
 .header-library {
   background-image: url('../images/header-bg/header-bg-libr_M.png');
+  transition: background-image 400ms cubic-bezier(0.4, 0, 0.2, 1);
   background-repeat: no-repeat;
   background-size: cover;
 
