скрытия инпута при нажании my-library

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
         <use href="./images/sprite.svg#icon-search"></use>
       </svg>
     </label>
-    <div class="my-library__btns">
+    <div class="my-library__btns visually-hidden">
       <ul class="my-library__list">
         <il class="my-library__item">
           <button class="my-library__button button js-btn-watched" type="button">Watched</button>
