--- a/src/sass/layout/_my-library-btn.scss
+++ b/src/sass/layout/_my-library-btn.scss
@@ -15,26 +15,26 @@
 }
 
 .my-library__item {
-  width: 129.53px;
+  width: 130px;
   height: 44px;
 }
 .my-library__button {
   display: inline-block;
   padding: 14px 36.19px 12px;
-  min-width: 129.53px;
+  min-width: 130px;
   font-weight: 500;
   line-height: 1.33333;
   text-align: center;
   text-transform: uppercase;
-  color: #fff;
+  color: $secondary-text-color;
   background: transparent;
-  border: 1px solid #fff;
+  border: 1px solid $primary-background;
   border-radius: 5px;
 }
 .my-library__button:focus,
 .my-library__button:hover {
-  border: 1 px solid #eb6308;
-  background: #eb6308;
+  border: 1 px solid $accent-secondary;
+  background: $accent-secondary;
   cursor: pointer;
 }
 
