--- a/src/sass/layout/_mobile.scss
+++ b/src/sass/layout/_mobile.scss
@@ -1,4 +1,4 @@
-.card-close-btn {
+.modal-card-close-btn {
   width: 30px;
   height: 30px;
   position: absolute;
@@ -11,12 +11,12 @@
 .mobile-menu__icon {
   outline: 1px solid black;
 }
-.card {
+.modal-card {
   width: 280px;
 
   padding: 20px;
 }
-.card-img {
+.modal-card-img {
   padding: 48px 20px 30px 20px;
   width: 240px;
 
@@ -30,7 +30,7 @@ img {
   min-width: 100%;
   min-height: 100%;
 }
-.card-body-title {
+.modal-card-body-title {
   margin-bottom: 20px;
   padding-left: 20px;
 
@@ -39,13 +39,13 @@ img {
 
   color: $primary-text-color;
 }
-.card-body-name {
+.modal-card-body-name {
   padding-left: 20px;
   margin-bottom: 10px;
 
   color: $footer-text-color;
 }
-.card-body-vote-average {
+.modal-card-body-vote-average {
   margin-left: 51px;
   width: 36px;
   height: 16px;
@@ -57,26 +57,26 @@ img {
   background: $accent-secondary;
   border-radius: 5px;
 }
-.card-body-popularuity {
+.modal-card-body-popularuity {
   padding-left: 56px;
 }
-.card-body-original {
+.modal-card-body-original {
   padding-left: 49px;
 }
-.card-body-genres {
+.modal-card-body-genres {
   padding-left: 86px;
 }
 
-.card-body-vote-count,
-.card-body-popularuity,
-.card-body-original,
-.card-body-text,
-.card-body-genres {
+.modal-card-body-vote-count,
+.modal-card-body-popularuity,
+.modal-card-body-original,
+.modal-card-body-text,
+.modal-card-body-genres {
   line-height: 1.17;
 
   color: $primary-text-color;
 }
-.card-body-overview-title {
+.modal-card-body-overview-title {
   margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 20px;
@@ -85,7 +85,7 @@ img {
 
   color: $primary-text-color;
 }
-.card-body-overview-text {
+.modal-card-body-overview-text {
   margin-bottom: 20px;
   padding-left: 20px;
 
@@ -93,12 +93,12 @@ img {
 
   color: $primary-text-color;
 }
-.card-container-btn {
+.modal-card-container-btn {
   padding-left: 20px;
   display: flex;
 }
-.card-btn-watched,
-.card-btn-queue {
+.modal-card-btn-watched,
+.modal-card-btn-queue {
   width: 112.58px;
   height: 44px;
 
@@ -108,7 +108,7 @@ img {
 
   background-color: $primary-background;
 }
-.card-btn-watched {
+.modal-card-btn-watched {
   background-color: $accent-secondary;
   color: $primary-text-color;
   border: 5px;
@@ -116,9 +116,9 @@ img {
   margin-right: 15px;
   padding: 0px 9px;
 }
-.card-body-container {
+.modal-card-body-container {
   display: flex;
 }
-.card-btn-text-first {
+.modal-card-btn-text-first {
   color: $secondary-text-color;
 }
