--- a/src/sass/layout/_tablet.scss
+++ b/src/sass/layout/_tablet.scss
@@ -1,5 +1,5 @@
 @media screen and (min-width: 768px) {
-  .card {
+  .modal-card {
     display: flex;
     justify-content: space-between;
     padding: 40px 30px 30px 40px;
@@ -7,19 +7,19 @@
     width: 618px;
     outline: 1px solid red;
   }
-  .card-img {
+  .modal-card-img {
     width: 264px;
     height: 374px;
     padding: 0;
   }
-  .card-info {
+  .modal-card-info {
     width: 264px;
   }
-  .card-btn-watched {
+  .modal-card-btn-watched {
     padding: 0;
   }
-  .card-btn-watched,
-  .card-btn-queue {
+  .modal-card-btn-watched,
+  .modal-card-btn-queue {
     width: 125px;
   }
 }
