--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,9 +5,9 @@
 @import './layout/header';
 @import './layout/header-bgi';
 @import './layout/gallery';
-// @import './layout/mobile';
-// @import './layout/tablet';
-// @import './layout/desktop';
+@import './layout/mobile';
+@import './layout/tablet';
+@import './layout/desktop';
 @import './layout/pagination';
 @import './layout/footer';
 @import './utils/backdrop';
