--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="container">
+  <div class="container header__box">
     <div class="header__menu">
       <div class="header__logo-box">
         <svg class="header__icon--logo" width="24" height="24">
@@ -21,5 +21,8 @@
         <use href="./images/sprite.svg#icon-search"></use>
       </svg>
     </label>
+    <svg class="header__theme-switcher ligth" width="20" height="20">
+      <use href="./images/sprite.svg#change-theme"></use>
+    </svg>
   </div>
 </header>
