--- a/src/sass/base/_base_styles.scss
+++ b/src/sass/base/_base_styles.scss
@@ -41,4 +41,5 @@ body {
   line-height: 1.33;
   letter-spacing: 0;
   font-weight: 500;
+  transition: background 600ms cubic-bezier(0.4, 0, 0.2, 1);
 }
