--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -60,9 +60,19 @@
   font-size: 12px;
   font-weight: 500;
   line-height: 1.34;
-  color: #000;
   text-transform: uppercase;
 }
+
+.film-title-light {
+  color: #000;
+  transition: color 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.film-title-dark {
+  color: #ffffff;
+  transition: color 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 .desc-wraper {
   display: flex;
