create functional scroll up btn

--- a/src/partials/scroll-up-btn.html
+++ b/src/partials/scroll-up-btn.html
@@ -1,1 +1,8 @@
-<button class="scroll-up-btn" type="button">scroll</button>
+<!-- <button class="scroll-up-btn" type="button">scroll</button> -->
+<div class="scroll-up-btn">
+    <a href="#" class="scroll-up-btn__link">
+        <svg class="scroll-up-btn__icon">
+            <use href='../src/images/sprite.svg#icon-circle-up'></use>
+        </svg>
+    </a>
+</div>
