--- a/src/sass/layout/_scroll-up-btn.scss
+++ b/src/sass/layout/_scroll-up-btn.scss
@@ -1,19 +1,33 @@
 .scroll-up-btn {
-  display: none; /* Hidden by default */
-  position: fixed; /* Fixed/sticky position */
-  bottom: 20px; /* Place the button at the bottom of the page */
-  right: 30px; /* Place the button 30px from the right */
-  z-index: 99; /* Make sure it does not overlap */
-  border: none; /* Remove borders */
-  outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
-  cursor: pointer; /* Add a mouse pointer on hover */
-  padding: 15px; /* Some padding */
-  border-radius: 10px; /* Rounded corners */
-  font-size: 18px; /* Increase font size */
-}
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: $accent;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 50px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.scroll-up-btn:hover {
-  background-color: #555; /* Add a dark-grey background on hover */
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+  }
+
+  &__icon {
+    object-fit: contain;
+    fill: $secondary-text-color;
+    width: 30px;
+    height: 30px;
+  }
+
+  &:hover {
+    background-color: #555;
+  }
 }
