--- a/src/sass/base/_base_styles.scss
+++ b/src/sass/base/_base_styles.scss
@@ -41,5 +41,18 @@ body {
   line-height: 1.33;
   letter-spacing: 0;
   font-weight: 500;
-  transition: background 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+body.light-theme {
+  background: #ffffff;
+  color: #000000;
+  transition: background 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+body.dark-theme {
+  background: #1a0202;
+  color: #ffffff;
+  transition: background 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
