--- a/src/sass/base/_base_styles.scss
+++ b/src/sass/base/_base_styles.scss
@@ -52,6 +52,7 @@ body.light-theme {
 
 body.dark-theme {
   background: #1a0202;
+  background-image: url(../../images/cinema.jpg);
   color: #ffffff;
   transition: background 600ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
