--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header header-home">
   <div class="container header__box">
     <div class="header__menu">
       <div class="header__logo-box">
