--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,6 +21,16 @@
         <use href="./images/sprite.svg#icon-search"></use>
       </svg>
     </label>
+    <div class="my-library__btns visually-hidden">
+      <ul class="my-library__list">
+        <il class="my-library__item">
+          <button class="my-library__button button js-btn-watched" type="button">Watched</button>
+        </il>
+        <il class="my-library__item">
+          <button class="my-library__button button js-btn-queue" type="button">Queue</button>
+        </il>
+      </ul>
+    </div>
     <svg class="header__theme-switcher ligth" width="20" height="20">
       <use href="./images/sprite.svg#change-theme"></use>
     </svg>
