Додано відкриття та закриття модалки
Без Кнопки!

--- a/src/sass/layout/_desktop.scss
+++ b/src/sass/layout/_desktop.scss
@@ -21,4 +21,9 @@
   .modal-card-btn-queue {
     width: 136px;
   }
+  .modal-movie-container {
+    position: absolute;
+    top: 100px;
+    left: 71px;
+  }
 }
