--- a/src/sass/layout/_tablet.scss
+++ b/src/sass/layout/_tablet.scss
@@ -22,4 +22,9 @@
   .modal-card-btn-queue {
     width: 125px;
   }
+  .modal-movie-container {
+    position: absolute;
+    top: 231px;
+    left: 75px;
+  }
 }
