--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -1,7 +1,7 @@
-<div class="modal-card hidden">
+<div class="modal-card">
     <div class="modal-card-img">
     <button class="modal-card-close-btn" type="button"><svg class="mobile-menu__icon" width="14" height="14">
-        <use href="./images/sprite.svg#icon-close"></use>
+        <use href='./images/icon-close.svg'></use>
     </svg></button>
         <img src="https://image.tmdb.org/t/p/w500/{{poster_path}}" alt="{{title}}" height="356" width="240">
     </div>
