--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 @import './layout/header';
 @import './layout/header-bgi';
 @import './layout/gallery';
+@import './layout/library';
 // @import './layout/mobile';
 // @import './layout/tablet';
 // @import './layout/desktop';
