--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -102,6 +102,7 @@
   position: absolute;
   right: 30px;
   bottom: -70px;
+  cursor: pointer;
   @media screen and (min-width: 767px) {
     right: 75px;
   }
