Remove tablet & desktop. Search movie info
Видалив з scss - tablet і desktop.
Підключив функцію по відображення модалки фільма по кліку на ньому.

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,3 +1,4 @@
 <div class="backdrop is-hidden">
-    <div class="modal-movie-container"></div>
+    <div class="modal-movie-container">
+    </div>
 </div>
