--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -2,18 +2,15 @@
   position: absolute;
   top: 20px;
   left: 20px;
-  background-color: gray;
 }
 .modal-card-close-btn {
   width: 30px;
   height: 30px;
   position: absolute;
   top: 18px;
-  left: 210px;
-  // background: #ffffff;
+  right: 18px;
   cursor: pointer;
   color: black;
-  // background-image: url('../../images/icon-close.svg');
 }
 .mobile-menu__icon {
   outline: 1px solid black;
@@ -134,4 +131,65 @@ img {
 }
 .modal-card-btn-text-first {
   color: $secondary-text-color;
+}
+
+@media screen and (min-width: 768px) {
+  .modal-card {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 30px 30px 40px;
+
+    width: 618px;
+    outline: 1px solid red;
+  }
+  .modal-card-img {
+    width: 264px;
+    height: 374px;
+    padding: 0;
+  }
+  .modal-card-info {
+    width: 264px;
+  }
+  .modal-card-btn-watched {
+    padding: 0;
+  }
+  .modal-card-btn-watched,
+  .modal-card-btn-queue {
+    width: 125px;
+  }
+  .modal-movie-container {
+    position: absolute;
+    top: 231px;
+    left: 75px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .modal-card {
+    padding: 50px 30px 40px 30px;
+
+    width: 882px;
+    outline: 1px solid red;
+  }
+  .modal-card-img {
+    width: 396px;
+    height: 478px;
+    padding: 0;
+  }
+  .modal-card-info {
+    width: 396px;
+  }
+  .modal-card-body-title {
+    font-size: 30px;
+    line-height: 1.17;
+  }
+  .modal-card-btn-watched,
+  .modal-card-btn-queue {
+    width: 136px;
+  }
+  .modal-movie-container {
+    position: absolute;
+    // top: 100px;
+    // left: 71px;
+    margin: 100px 50px;
+  }
 }
