hotfix for modal window

--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -35,7 +35,7 @@
   align-items: center;
   flex-shrink: 0;
 }
-img {
+.modal-card-pic {
   object-fit: contain;
   min-width: 100%;
   min-height: 100%;
