--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,2 @@
-<div class="backdrop is-hidden">
-    <div class="modal-movie-container">
-        <button>TEST</button>
-    </div>
+<div class="backdrop modal-movie-container is-hidden">
 </div>
