--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -1,12 +1,13 @@
 <div class='modal-card'>
   <div class='modal-card-img'>
-    <button class='modal-card-close-btn' type='button'><svg
-        class='mobile-menu__icon'
-        width='14'
-        height='14'
-      >
-        <use href='./images/icon-close.svg'></use>
-      </svg></button>
+    <button class='modal-card-close-btn' id="close-btn" type='button'>
+      <svg class='mobile-menu__icon'>
+          <path
+            d="M26.667 7.303l-1.97-1.97-7.808 7.808-7.808-7.808-1.97 1.97 7.808 7.808-7.808 7.808 1.97 1.97 7.808-7.808 7.808 7.808 1.97-1.97-7.808-7.808 7.808-7.808z">
+          </path>
+        {{!-- <use href='./images/sprite.svg#icon-close'></use> --}}
+      </svg>
+    </button>
     <img
       class='modal-card-pic'
       src='https://image.tmdb.org/t/p/w500/{{poster_path}}'
