правит лишние заголовки h1

--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -46,12 +46,8 @@
       <p class='modal-card-body-overview-text'>{{overview}}</p>
     </div>
     <div class='modal-card-container-btn'>
-      <button class='modal-card-btn-watched' type='button'><span
-          class='modal-card-btn-text-first'
-        >ADD TO WATCHED</span></button>
-      <button class='modal-card-btn-queue' type='button'><span
-          class='modal-card-btn-text-second'
-        >ADD TO QUEUE</span></button>
+      <button class='modal-card-btn-watched modal-card-btn-text-first' type='button'>ADD TO WATCHED</button>
+      <button class='modal-card-btn-queue modal-card-btn-text-second' type='button'>ADD TO QUEUE</button>
     </div>
   </div>
 </div>
