добавляет outline + прячет иконку

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
     </div>
 
     <label class="header__label">
-      <input class="header__input header__form-input" name="filmname" placeholder="Поиск фильмов" />
+      <input class="header__input header__form-input" type="search" name="filmname" placeholder="Поиск фильмов" />
 
       <svg class="header__icon--search" width="12" height="12">
         <use href="./images/sprite.svg#icon-search"></use>
