--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -77,6 +77,7 @@
   width: 280px;
   height: 20px;
   border: none;
+  outline: none;
   background-color: transparent;
   color: $primary-background;
 
@@ -116,4 +117,8 @@
 .dark {
   fill: $primary-background;
   transition: fill 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  display: none;
 }
