--- a/src/partials/contributors.html
+++ b/src/partials/contributors.html
@@ -1,5 +1,6 @@
 <div class="backdrop is-hidden">
   <div class="cont">
+    <h3 class="cont__title">Contributors <span class="cont__title--flicker">Team</span></h3>
     <ul class="cont__list">
       <li class="cont__member">
         <img class="cont__photo" src="./images/831.png" alt="">
