--- a/src/sass/layout/_contributors.scss
+++ b/src/sass/layout/_contributors.scss
@@ -8,6 +8,28 @@
   box-shadow: 0 0 0.2rem rgb(0, 0, 0), 0 0 0.2rem rgb(0, 0, 0), 0 0 2rem #2e2e2e, 0 0 0.8rem #2e2e2e,
     0 0 2.8rem #2e2e2e, inset 0 0 1.3rem #2e2e2e;
 
+    &__title {
+      text-align: center;
+      margin-top: 5px;
+      margin-bottom: 20px;
+      font-size: 50px;
+      font-weight: 100;
+      color: #fff;
+      text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px $accent,
+      0 0 80px $accent,
+      0 0 90px $accent,
+      0 0 100px $accent,
+      0 0 150px $accent;
+      
+      &--flicker {
+        animation: flicker 1.5s infinite alternate;
+      }
+    }
+
   &__list {
     display: flex;
     flex-wrap: wrap;
@@ -80,4 +102,26 @@
       flex-basis: calc((100% - 120px) / 4);
     }
   }
+}
+
+/* Flickering animation */
+@keyframes flicker {
+    
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+
+      text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px $accent,
+      0 0 80px $accent,
+      0 0 90px $accent,
+      0 0 100px $accent,
+      0 0 150px $accent;
+  
+  }
+  
+  20%, 24%, 55% {        
+      text-shadow: none;
+  }    
 }
