--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -2,6 +2,21 @@
   position: absolute;
   width: 100%;
   height: 100%;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.705);
+  transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
+
+  &.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
 }
 .modal-card {
   position: absolute;
@@ -31,6 +46,7 @@
 .mobile-menu__icon {
   width: 30px;
   height: 30px;
+  background-color: white;
   // outline: 1px solid black;
 }
 .modal-card-img {
