--- a/src/sass/layout/_contributors.scss
+++ b/src/sass/layout/_contributors.scss
@@ -47,11 +47,12 @@
   }
 
   &__photo {
-    width: 50px;
-    height: 50px;
+    border-radius: 25%;
+    width: 75px;
     margin: 0 auto 10px;
   }
 
+  &__name,
   &__role {
     margin-bottom: 10px;
     color: #fff;
@@ -61,9 +62,9 @@
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    margin-bottom: 10px;
     box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem $accent, 0 0 0.8rem $accent,
       0 0 2.8rem $accent, inset 0 0 1.3rem $accent;
+      transition: fill 250ms;
 
     &:hover {
       fill: $accent;
@@ -96,7 +97,7 @@
 @media screen and (min-width: 1024px) {
   .cont {
     background-image: url('../images/wall-desktop.jpg');
-    width: 85%;
+    max-width: 750px;
 
     &__member {
       flex-basis: calc((100% - 120px) / 4);
