--- a/src/sass/base/_base_styles.scss
+++ b/src/sass/base/_base_styles.scss
@@ -59,7 +59,7 @@ body.light-theme {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 1152px) {
-    background-size: 100% auto;
+    background-size: cover;
   }
 }
 
@@ -77,7 +77,8 @@ body.dark-theme {
   color: #ffffff;
   transition: background 600ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
   @media screen and (min-width: 1152px) {
-    background-size: 100% auto;
+    background-size: cover;
   }
 }
