Добавляет переход на home для лого, корректировки ошибок,

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -23,6 +23,7 @@
   text-decoration: underline;
   text-decoration-color: $footer-text-color;
   margin-left: 4px;
+  cursor: pointer;
 }
 .footer__description-second {
   display: inline-flex;
