--- a/src/templates/movie-card.hbs
+++ b/src/templates/movie-card.hbs
@@ -1,12 +1,7 @@
 <div class='modal-card'>
   <div class='modal-card-img'>
-    <button class='modal-card-close-btn' id="close-btn" type='button'>
-      <svg class='mobile-menu__icon'>
-          <path class="mobile-menu__path"
-            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
-          </path>
-        {{!-- <use href='./images/sprite.svg#icon-close'></use> --}}
-      </svg>
+    <button class='modal-card-close-btn' id='close-btn' type='button'>
+
     </button>
     <img
       class='modal-card-pic'
