--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,7 +44,7 @@
         </li>
       </ul>
     </div>
-    <p class="header__notification">Search result not successful. Enter the correct movie name!</p>
+    <!-- <p class="header__notification">Search result not successful. Enter the correct movie name!</p> -->
     <svg class="header__theme-switcher ligth" width="20" height="20">
       <use href="./images/sprite.svg#change-theme"></use>
     </svg>
