--- a/src/partials/library.html
+++ b/src/partials/library.html
@@ -3,8 +3,8 @@
   <ul class="library js-library">
     <!-- Список <li> с карточками изображений -->
   </ul>
-  <div class="info-notify is-hidden">
-    <p class="info-notify-text"></p>
+  <div class="info-notify">
+    <p class="info-notify-text">Search result not successful. Enter the correct movie name!</p>
     <img src="./images/info-images/empty-box.png" alt="info-image" class="info-image" />
   </div>
 </div>
