--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,9 +44,10 @@
         </li>
       </ul>
     </div>
-    <p class="header__notification">Search result not successful. Enter the correct movie name!</p>
-    <svg class="header__theme-switcher ligth" width="20" height="20">
+    <p class="header__error-text is-hidden">Search result not successful. Enter the correct movie name!</p>
+    <div class="container">
+      <svg class="header__theme-switcher ligth" width="20" height="20">
       <use href="./images/sprite.svg#change-theme"></use>
-    </svg>
+    </svg></div>
   </div>
 </header>
