--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,7 +4,7 @@
   padding-top: 41px;
   padding-bottom: 97px;
 }
-.header__notification {
+.header__error-text {
   position: absolute;
   top: 120px;
 
@@ -14,13 +14,13 @@
   color: #ff001b;
 }
 @media screen and (min-width: 768px) {
-  .header__notification {
+  .header__error-text {
     left: 25%;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .header__notification {
+  .header__error-text {
     left: 30%;
   }
 }
@@ -132,11 +132,16 @@
 }
 .header__theme-switcher {
   position: absolute;
-  right: 30px;
-  bottom: -70px;
+  right: 20px;
+  top: 150px;
   cursor: pointer;
+
   @media screen and (min-width: 768px) {
     right: 75px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    right: 150px;
   }
 }
 
